# spring-2026-lab03-akshay17arun

./: pyproject.toml
part1_claude_code/src/: 01_eda.py  02_feature_engineering.py  03_xgboost_model.py  analyze_data.py  evaluate_model.py  generate_report.py  main.py  report.py
part2_antigravity/: README.md  main.py  plan.md  pyproject.toml
part2_antigravity/src/: eda.py  evaluate.py  features.py  train.py
